@@ -1,6 +1,7 @@
 Changelog for getTables.
 1.11.4-alpha
 - В события тригеров добавлены редактируемые объекты.
+- В getTables добавлена функция insertToArray.
 
 1.11.4-alpha
 - Адаптация под modx3(3.0.1) и pdoTools3.
